Added an img, and finished home section along with styling

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
+      <button class="navbar-toggler order-1" data-toggle="collapse" data-target="#navbar-collapse">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a href="index.html" class="navbar-brand">LoopLab Theme</a>
@@ -34,6 +34,7 @@
           </li>
         </ul>
       </div>
+
     </div>
   </nav>
 
@@ -72,7 +73,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-4 col-md-8 m-md-auto">
                 <div class="card bg-primary text-center card-form">
                   <div class="card-body">
                     <h3>Sign up Today!</h3>
