--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,52 @@
         </div>
       </div>
   </header>
+
+  <!-- EXPLORE HEAD -->
+  <section id="explore-head-section">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <div class="py-5">
+            <h1 class="display-4">Explore</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus fuga rem, fugit quidem doloremque aperiam adipisci molestias quibusdam voluptas laudantium.</p>
+            <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- EXPLORE SECTION -->
+  <section id="explore-section" class="bg-light text-muted py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/explore-section1.jpeg" alt="" class="img-fluid mb-3 rounded-circle">
+        </div>
+        <div class="col-md-6">
+          <h3 class="text-sm-center">Explore and Connect</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere a perspiciatis et corrupti rem quod placeat tempora suscipit repudiandae. Quis quo molestiae voluptates, praesentium quisquam.</p>
+          <div class="d-flex flex-row">
+            <div class="p-4 align-self-start">
+              <i class="fa fa-check"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam unde voluptatem cupiditate excepturi fugit nam tempora expedita quod ullam nesciunt.
+            </div>
+          </div>
+          <div class="d-flex flex-row">
+            <div class="p-4 align-self-start">
+              <i class="fa fa-check"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam unde voluptatem cupiditate excepturi fugit nam tempora expedita quod ullam nesciunt.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
