--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a href="#home" class="nav-link">Home</a>
+            <a href="#home-section" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#explore-head-section" class="nav-link">Explore</a>
@@ -143,6 +143,53 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam unde voluptatem cupiditate excepturi fugit nam tempora expedita quod ullam nesciunt.
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+    <!-- CREATE HEAD -->
+  <section id="create-head-section" class="bg-primary">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <div class="py-5">
+            <h1 class="display-4">Create</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus fuga rem, fugit quidem doloremque aperiam adipisci molestias quibusdam voluptas laudantium.</p>
+            <a href="#" class="btn btn-outline-light">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CREATE SECTION -->
+  <section id="create-section" class="py-5">
+    <div class="container">
+      <div class="row">
+        
+        <div class="col-md-6">
+          <h3 class="text-sm-center">Explore and Connect</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere a perspiciatis et corrupti rem quod placeat tempora suscipit repudiandae. Quis quo molestiae voluptates, praesentium quisquam.</p>
+          <div class="d-flex flex-row">
+            <div class="p-4 align-self-start">
+              <i class="fa fa-check"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam unde voluptatem cupiditate excepturi fugit nam tempora expedita quod ullam nesciunt.
+            </div>
+          </div>
+          <div class="d-flex flex-row">
+            <div class="p-4 align-self-start">
+              <i class="fa fa-check"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam unde voluptatem cupiditate excepturi fugit nam tempora expedita quod ullam nesciunt.
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 order-2">
+          <img src="img/create-section1.jpg" alt="macbook" class="img-fluid mb-3 rounded-circle">
         </div>
       </div>
     </div>
