--- a/src/index.html
+++ b/src/index.html
@@ -167,9 +167,8 @@
   <section id="create-section" class="py-5">
     <div class="container">
       <div class="row">
-        
         <div class="col-md-6">
-          <h3 class="text-sm-center">Explore and Connect</h3>
+          <h3 class="text-sm-center">Create your passion</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere a perspiciatis et corrupti rem quod placeat tempora suscipit repudiandae. Quis quo molestiae voluptates, praesentium quisquam.</p>
           <div class="d-flex flex-row">
             <div class="p-4 align-self-start">
@@ -188,8 +187,54 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 order-2">
+        <div class="col-md-6">
           <img src="img/create-section1.jpg" alt="macbook" class="img-fluid mb-3 rounded-circle">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- SHARE HEAD -->
+  <section id="share-head-section" class="bg-primary">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <div class="py-5">
+            <h1 class="display-4">Share</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus fuga rem, fugit quidem doloremque aperiam adipisci molestias quibusdam voluptas laudantium.</p>
+            <a href="#" class="btn btn-outline-light">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- SHARE SECTION -->
+  <section id="share-section" class="bg-light text-muted py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/share-section1.jpeg" alt="view" class="img-fluid mb-3 rounded-circle">
+        </div>
+        <div class="col-md-6">
+          <h3 class="text-sm-center">Share what you create</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere a perspiciatis et corrupti rem quod placeat tempora suscipit repudiandae. Quis quo molestiae voluptates, praesentium quisquam.</p>
+          <div class="d-flex flex-row">
+            <div class="p-4 align-self-start">
+              <i class="fa fa-check"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam unde voluptatem cupiditate excepturi fugit nam tempora expedita quod ullam nesciunt.
+            </div>
+          </div>
+          <div class="d-flex flex-row">
+            <div class="p-4 align-self-start">
+              <i class="fa fa-check"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam unde voluptatem cupiditate excepturi fugit nam tempora expedita quod ullam nesciunt.
+            </div>
+          </div>
         </div>
       </div>
     </div>
