--- a/src/index.html
+++ b/src/index.html
@@ -239,6 +239,21 @@
       </div>
     </div>
   </section>
+
+  <!-- MAIN FOOTER -->
+  <footer id="main-footer" class="bg-dark">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <div class="py-4">
+            <h1 class="h3">LoopLab</h1>
+            <p>Copyright &copy; 2018</p>
+            <button class="btn btn-primary" data-toggle="modal" data-target="#contact-modal">Contact Us</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
