--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,11 @@
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
-      <button class="navbar-toggler order-1" data-toggle="collapse" data-target="#navbar-collapse">
+      <a href="index.html" class="navbar-brand">LoopLab Theme</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="index.html" class="navbar-brand">LoopLab Theme</a>
+      
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
