--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible"
   content="ie=edge">
-  <title>Bootstrap 4 Starter Pack</title>
+  <title>JdLab Theme</title>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
-      <a href="index.html" class="navbar-brand">LoopLab Theme</a>
+      <a href="index.html" class="navbar-brand">JdLab Theme</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -247,7 +247,7 @@
       <div class="row">
         <div class="col text-center">
           <div class="py-4">
-            <h1 class="h3">LoopLab</h1>
+            <h1 class="h3">JdLab</h1>
             <p>Copyright &copy; 2018</p>
             <button class="btn btn-primary" data-toggle="modal" data-target="#contact-modal">Contact Us</button>
           </div>
