Changed form background color to info

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-8 m-md-auto">
-                <div class="card bg-primary text-center card-form">
+                <div class="card bg-info text-center card-form">
                   <div class="card-body">
                     <h3>Sign up Today!</h3>
                     <p>Please fill out this form to register</p>
